choose-mirror (1.03) UNRELEASED; urgency=low

  * Joey Hess
    - Remove long unused mirror/distribution template.

 -- Joey Hess <joeyh@debian.org>  Wed,  1 Sep 2004 13:19:34 -0400

choose-mirror (1.02) unstable; urgency=low

  * Kenshi Muto
    - Mark one templates string for translation.
  * Joey Hess
    - Set proxy env variable without subjecting the value to shell
      mangling. Closes: #268158
  * Updated translations: 
    - Catalan (ca.po) by Jordi Mallach
    - Danish (da.po) by Claus Hindsgaul
    - Greek, Modern (1453-) (el.po) by Greek Translation Team
    - Basque (eu.po) by 
    - French (fr.po) by French Team
    - Croatian (hr.po) by Krunoslav Gernhard
    - Italian (it.po) by Giuseppe Sacco
    - Japanese (ja.po) by Kenshi Muto
    - Lithuanian (lt.po) by KÄstutis BiliÅ«nas
    - BÃ¸kmal, Norwegian (nb.po) by 
    - Dutch (nl.po) by Bart Cornelis
    - Polish (pl.po) by Bartosz Fenski
    - Portuguese (pt.po) by Miguel Figueiredo
    - Portuguese (Brazil) (pt_BR.po) by AndrÃ© LuÃ­s Lopes
    - Turkish (tr.po) by Recai OktaÅ
    - Ukrainian (uk.po) by Eugeniy Meshcheryakov
    - Simplified Chinese (zh_CN.po) by Carlos Z.F. Liu

 -- Joey Hess <joeyh@debian.org>  Fri, 27 Aug 2004 15:24:51 -0400

choose-mirror (1.01) unstable; urgency=low

  * Joey Hess
    - Fabbione noticed that we forgot to free(command).
    - Only ask what suite to use at medium priority.
    - Clean debian/{ftp,http}list-countries.
    - Allow preseeding of country or forcing of manual mirror entry via
      mirror/country. Closes: #240686, #266647, #266758

 -- Joey Hess <joeyh@debian.org>  Tue, 27 Jul 2004 10:59:41 -0400

choose-mirror (1.00) unstable; urgency=low

  * Updated translations: 
    - Arabic (ar.po) by Abdulaziz Al-Arfaj
    - Danish (da.po) by Frederik Dannemare
    - German (de.po) by Dennis Stampfer
    - Croatian (hr.po) by Krunoslav Gernhard

 -- Joey Hess <joeyh@debian.org>  Sun, 25 Jul 2004 19:27:38 -0400

choose-mirror (0.046) unstable; urgency=low
