@@ -2,6 +2,7 @@ choose-mirror (1.03) UNRELEASED; urgency=low
 
   * Joey Hess
     - Remove long unused mirror/distribution template.
+    - Allow mirror/suite to be preseeded.
 
  -- Joey Hess <joeyh@debian.org>  Wed,  1 Sep 2004 13:19:34 -0400
 
